# Chat-Backend

./: .env.example  .gitignore  README.md  doc.md  pyproject.toml
docs/: control-flow.md
skillarena_chat/: config.py  main.py  models.py
skillarena_chat/db/: database.py
skillarena_chat/services/: auth.py  chat.py  exceptions.py
skillarena_chat/templates/: chat.html
skillarena_chat/utils/: manager.py  middlewares.py  notifications.py  s3.py  services.py
skillsetu_chat/: main.py
skillsetu_chat/templates/: chat.html
skillsetu_chat/utils/: database.py  manager.py  models.py  notifications.py  s3.py  services.py
